--- a/WCSTrainer/Pages/Shared/_People.cshtml
+++ b/WCSTrainer/Pages/Shared/_People.cshtml
@@ -34,9 +34,7 @@
       </div>
    </div>
 
-   <button class="btn btnWhite nbg-btn" onclick="confirmSelectionInPartial()">
-      Add Trainer
-   </button>
+   <button class="btn btnWhite nbg-btn" onclick="confirmSelectionInPartial()">Add Trainer</button>
 </div>
 
 <div class="details">
