--- a/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
@@ -11,7 +11,7 @@
 
 <div class="panel">
    <div class="body">
-      <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
+      <partial name="_Sidebar"/>
       <div class="properties">
          <div class="order-list2">
             <div class="sorters">
