--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -5,8 +5,7 @@
 
 <div class="panel">
    <div class="body">
-      <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
-
+      <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
             <p class="title">Conclude Training Order #@Html.DisplayFor(model => model.TrainingOrder.Id)</p>
