--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -14,7 +14,7 @@
 
 <div class="panel">
    <div class="body">
-      <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
+      <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
             <p class="title">Create New Training Order</p>
