--- a/WCSTrainer/Pages/TrainingOrders/Index.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Index.cshtml
@@ -29,7 +29,7 @@
 
 <div class="panel">
    <div class="body">
-      <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
+      <partial name="_Sidebar" />
       <div class="properties">
          <div class="list-container">
             <div class="top">
