--- a/WCSTrainer/Pages/Accounts/Details.cshtml
+++ b/WCSTrainer/Pages/Accounts/Details.cshtml
@@ -5,7 +5,7 @@
 
 <div class="panel">
    <div class="body">
-      <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
+      <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
             @if (Model.UserAccount != null) {
