--- a/WCSTrainer/Pages/Accounts/Employees/Edit.cshtml
+++ b/WCSTrainer/Pages/Accounts/Employees/Edit.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="panel">
    <div class="body">
-      <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
+      <partial name="_Sidebar" />
       <div class="properties">
          <div class="user-form">
             <div class="field-container">
