--- a/WCSTrainer/Pages/TrainingOrders/Details.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Details.cshtml
@@ -39,7 +39,9 @@
                      Verify Order
                   </a>
                }
-               <img id="printButton" class="btn bg-btn btnWhite" src="/images/print.png">
+               <div class="btn bg-btn">
+                  <img id="printButton" src="/images/print.svg">
+               </div>
             </div>
          </div>
       </div>
